# machina_ndof_sensor_driver

./: .clang-tidy  .gitignore  Doxyfile  LICENSE_8md.html  Makefile  README.md  README_8md.html  annotated.html  classes.html  classmachina_1_1client_1_1ndof__sensor__driver_1_1MachinaNDofSensorDriverClient-members.html  classmachina_1_1client_1_1ndof__sensor__driver_1_1MachinaNDofSensorDriverClient.html  classmachina_1_1client_1_1ndof__sensor__driver_1_1MachinaNDofSensorDriverClientNode-members.html  classmachina_1_1client_1_1ndof__sensor__driver_1_1MachinaNDofSensorDriverClientNode.html  classmachina_1_1client_1_1ndof__sensor__driver_1_1MachinaNDofSensorDriverClientNode__inherit__graph.dot  classmachina_1_1service_1_1ndof__sensor__driver_1_1MachinaNDofSensorDriverServiceNode-members.html  classmachina_1_1service_1_1ndof__sensor__driver_1_1MachinaNDofSensorDriverServiceNode.html  classmachina_1_1service_1_1ndof__sensor__driver_1_1MachinaNDofSensorDriverServiceNode__coll__graph.dot  classmachina_1_1service_1_1ndof__sensor__driver_1_1MachinaNDofSensorDriverServiceNode__inherit__graph.dot  classmachina_1_1tcp__interface_1_1TcpInterface-members.html  classmachina_1_1tcp__interface_1_1TcpInterface.html  classsensor__simulation_1_1Sensor-members.html  classsensor__simulation_1_1Sensor.html  classsensor__simulation_1_1Sensor__inherit__graph.dot  dir_000004_000006.html  dir_000009_000007.html  dir_000010_000006.html  dir_000011_000006.html  dir_000012_000010.html  dir_000017_000015.html  dir_093c175742d5822fd7eea816425ff710.html  dir_093c175742d5822fd7eea816425ff710_dep.dot  dir_355c148968958b5c91526db61bfb46dd.html  dir_378092621b0650fcd5b6537f237dad26.html  dir_378092621b0650fcd5b6537f237dad26_dep.dot  dir_4196de627f5a3bef9b0e67ba054335fa.html  dir_4196de627f5a3bef9b0e67ba054335fa_dep.dot  dir_4eeb864c4eec08c7d6b9d3b0352cfdde.html  dir_553c31a8fb6ab619b8668a3eecce0dbe.html  dir_5f99a080bcb6abd341298a331724285c.html  dir_6802b5bdac077fef17cbc5acb6a41f35.html  (+84 more)
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: ci.yaml
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  files_0.js  files_1.js  files_2.js  files_3.js  files_5.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  (+21 more)
src/machina_ndof_sensor_driver/: CMakeLists.txt  package.xml
src/machina_ndof_sensor_driver_client/: CMakeLists.txt  package.xml
src/machina_ndof_sensor_driver_client/include/machina_ndof_sensor_driver_client/: machina_ndof_sensor_driver_client.hpp  machina_ndof_sensor_driver_client_node.hpp
src/machina_ndof_sensor_driver_client/resources/: parameters.yaml
src/machina_ndof_sensor_driver_client/src/: machina_ndof_sensor_driver_client.cpp  machina_ndof_sensor_driver_client_node.cpp
src/machina_ndof_sensor_driver_msgs/: CMakeLists.txt  package.xml
src/machina_ndof_sensor_driver_msgs/msg/: JointSensorOutput.msg  SensorOutput.msg
src/machina_ndof_sensor_driver_msgs/srv/: GetLatestSensorData.srv
src/machina_ndof_sensor_driver_service/: CMakeLists.txt  package.xml
src/machina_ndof_sensor_driver_service/include/machina_ndof_sensor_driver_service/: machina_ndof_sensor_driver_service_node.hpp
src/machina_ndof_sensor_driver_service/resources/: parameters.yaml
src/machina_ndof_sensor_driver_service/src/: machina_ndof_sensor_driver_service_node.cpp
src/machina_ndof_sensor_driver_system_tests/: CMakeLists.txt  package.xml
src/machina_ndof_sensor_driver_system_tests/launch/: machina_ndof_sensor_driver.launch.py
src/machina_ndof_sensor_driver_system_tests/param/: machina_ndof_sensor_driver_client.param.yaml  machina_ndof_sensor_driver_service_sensor_1.param.yaml  machina_ndof_sensor_driver_service_sensor_2.param.yaml
src/machina_ndof_sensor_driver_system_tests/tests/: sensor_simulation.py
src/machina_tcp_interface/: CMakeLists.txt  package.xml
src/machina_tcp_interface/include/machina_tcp_interface/: machina_tcp_interface.hpp
src/machina_tcp_interface/src/: machina_tcp_interface.cpp
tools/image/: Dockerfile  cyclonedds.xml
tools/scripts/: examine_sensor_output.py  source_all.sh
tools/tmux_configs/: machina_sensor_simulation.yaml
