<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>machina_ndof_sensor_driver_msgs</name>
  <version>0.0.0</version>
  <description>Custom messages for Machina N-DoF Sensor Driver</description>
  <maintainer email="sisahawork@gmail.com">Siddharth Saha</maintainer>
  <license>AGPL-3.0-only</license>
  <author email="sisahawork@gmail.com">Siddharth Saha</author>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  
  <build_depend>rosidl_default_generators</build_depend>

  <depend>builtin_interfaces</depend>
  <depend>std_msgs</depend>
  <depend>example_interfaces</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_lint_cmake</test_depend>
  <test_depend>ament_cmake_xmllint</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
