<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>machina_tcp_interface</name>
  <version>0.0.0</version>
  <description>TCP Interface implementation to be used in Machina N-DoF Driver</description>
  <maintainer email="sisahawork@gmail.com">Siddharth Saha</maintainer>
  <license>AGPL-3.0-only</license>
  <author email="sisahawork@gmail.com">Siddharth Saha</author>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_lint_cmake</test_depend>
  <test_depend>ament_cmake_xmllint</test_depend>
  <test_depend>ament_cmake_clang_format</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
